--- a/style.css
+++ b/style.css
@@ -1,30 +1,15 @@
 body{
-      background-color: #EAEAEA;
-      margin: 0px;
+      background-color: black;
       font-family: 'Roboto', sans-serif;
   }
 
-.container{
-    width: 100%;
-}
-
-#header{
-    background-color: white;
-    overflow: hidden;
-}
-
-h1{
-    padding: 0% 0% 0% 25%;
-}
 
 .publicacion{
     width: 50%;
     height: auto;
     background-color:white;
-    margin: auto;
-    margin-top: 40px;
+    margin: 60px auto;
     overflow: hidden;
-    border-radius: 5px;
 }
 
 .title{
