--- a/style.css
+++ b/style.css
@@ -3,7 +3,6 @@ body{
       font-family: 'Roboto', sans-serif;
   }
 
-
 .publicacion{
     width: 50%;
     height: auto;
@@ -12,18 +11,45 @@ body{
     overflow: hidden;
 }
 
+#name_profile{
+    width: 20px;
+    display: inline-block;
+}
+
 .title{
     font-weight: bold;
     display: inline;
-
 }
 
-.number{
-    color: gray;
+.post{
+    width: 100%;
+}
+
+.comentario{
+    text-align: left;
+    padding: 0px 20px 0px 20px;
+}
+
+.icons{
+padding: 10px 15px;
+}
+
+i{
+    font-size: 2.5em;
+    margin: 0px 5px;
+}
+
+#bookmark{
     float: right;
-    padding-right: 20px;
 }
 
+#icon_option{
+  float: right;
+}
+
+.header{
+    padding: 10px 0px;
+}
 .profile{
 height: 30px;
 display: inline;
